# wakepcbox

./: Cargo.toml  README.md  cfg.toml  espflash.toml  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
hardware/: bom.csv  wakepc.kicad_pcb  wakepc.kicad_pro  wakepc.kicad_sch
hardware/Library.pretty/: IC18_ESP32-C3-WROOM-02-N4_EXP.kicad_mod  OLED I2C DISPLAY.kicad_mod
hardware/STL/: bottom-v8.stl  button-center-v8.stl  button-gard-v11.stl  button3-v8.stl  upper-v8.stl
hardware/gerber/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: config.rs  displayctl.rs  keyevent.rs  main.rs  ui.rs  wakepacket.rs  wifi.rs
src/img/: convert.sh
