[package]
name = "wakepcbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
[features]
default = ["native"]
native = ["esp-idf-sys/native"]
light-sleep = []

[dependencies]
esp-idf-sys = { version = "=0.34", features = ["binstart"] }
esp-idf-svc = "=0.48"
embedded-svc = "=0.27"
esp-idf-hal = "=0.43"
log = "0.4"
anyhow = "1"
sntpc = "0.3.6"
wake-on-lan = "0.2.0"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"
chrono = "0.4.31"
heapless = "0.8.0"
toml-cfg = "0.1.3"
config = "0.13.4"

[build-dependencies]
embuild = "0.28"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
